[package]
name = "logalyzer"
version = "0.1.0"
edition = "2021"
authors = ["Logalyzer Team"]
description = "A high-performance cross-platform log analysis CLI tool"
license = "MIT"

[[bin]]
name = "logalyzer"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", default-features = false, features = ["derive", "std", "usage", "error-context", "help"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
